inventory/src/main/java/com/example/inventory/error/InventoryNotFoundException.java
package com.example.inventory.error;

public class InventoryNotFoundException  extends RuntimeException {

    public InventoryNotFoundException(Long productId) {
        super("El inventario con ID de producto " + productId + " no fue encontrado.");
    }

}
